adding index routing and nested routes

--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -22,11 +22,11 @@
 
 /* CSS Modules feature */
 .nav a:global(.active) {
-  color: var(--color-brand--1);
+  color: var(--color-brand--2);
 }
 
-.ctaLink:link,
-.ctaLink:visited {
+a.ctaLink:link,
+a.ctaLink:visited {
   background-color: var(--color-brand--2);
   color: var(--color-dark--0);
   padding: 0.8rem 2rem;
