--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -2,8 +2,10 @@
   width: 100%;
   height: 65vh;
   list-style: none;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  /* overflow-y: scroll; */
+  /* overflow-x: hidden; */
+  overflow-y: auto;
+  overflow-x: auto;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
